# cpe-bigdata-project-cpp-dependencies

./: CMakeLists.txt  README.md  main.cpp
include/easyexif/: exif.cpp  exif.h
